--- a/src/main/resources/templates/Administration/Ainventario/inventario.html
+++ b/src/main/resources/templates/Administration/Ainventario/inventario.html
@@ -31,6 +31,57 @@
 			<div th:replace="~{layouts/Adminmenu :: menu}">Menú</div>
 			<div class="col py-3" style="width: 10px">
 				<h3 align="center">Inventario</h3>
+
+				<div class="row my-3">
+					<div>
+						<span class="h5">Reportes: </span>
+					</div>
+					<div class="mt-2">
+						<button class="btn btn-outline-dark" id="bar" value="bar" onclick="traerData('bar')"
+							data-bs-toggle="modal" data-bs-target="#exampleModal">
+							<i class="fa-solid fa-chart-column"></i>
+						</button>
+						<button class="btn btn-outline-dark" id="pie" value="pie" onclick="traerData('pie')"
+							data-bs-toggle="modal" data-bs-target="#exampleModal">
+							<i class="fa-solid fa-chart-pie"></i>
+						</button>
+						<button class="btn btn-outline-dark" id="pie" value="pie" onclick="traerData('line')"
+							data-bs-toggle="modal" data-bs-target="#exampleModal">
+							<i class="fa-solid fa-chart-line"></i>
+						</button>
+						<button class="btn btn-outline-danger">
+							<i class="fa-solid fa-file-pdf"></i>
+						</button>
+						<button class="btn btn-outline-success">
+							<i class="fa-solid fa-file-excel"></i>
+						</button>
+					</div>
+				</div>
+
+				<!-- Modal -->
+
+				<div class="modal fade" id="exampleModal" tabindex="-1"
+					aria-labelledby="exampleModalLabel" aria-hidden="true">
+					<div class="modal-dialog">
+						<div class="modal-content">
+							<div class="modal-header">
+								<h5 class="modal-title" id="exampleModalLabel">DIAGRAMAS</h5>
+								<button type="button" class="btn-close" data-bs-dismiss="modal"
+									aria-label="Close"></button>
+							</div>
+							<div class="modal-body">
+								<canvas id="myChart" width="100" height="100"></canvas>
+							</div>
+							<div class="modal-footer">
+								<div class="row">
+									<button type="button" class="btn btn-secondary"
+										data-bs-dismiss="modal">Cerrar</button>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+
 				<!-- TABLE -->
 
 				<div class="container" id="scroll">
@@ -43,9 +94,10 @@
 								</tr>
 							</thead>
 							<tbody>
-								<tr th:each="in : ${lstIn}">
-									<td th:text="${in.id_Producto_fk.nombre}"></td>
-									<td th:text="${in.stock}"></td>
+								<tr th:each="in : ${lstIn}" th:id="invt">
+									<td th:text="${in.id_Producto_fk.nombre}"
+										th:th:value="producto"></td>
+									<td th:text="${in.stock}" th:value="stock"></td>
 								</tr>
 							</tbody>
 						</table>
@@ -54,7 +106,7 @@
 			</div>
 		</div>
 	</div>
-*/
+
 	<input type="hidden" id="txt_id">
 
 	<style>
@@ -81,6 +133,9 @@
 		th:src="@{/datatables/DataTables-1.12.1/js/dataTables.bootstrap5.min.js}"></script>
 	<!-- JavaScript -->
 	<script type="text/javascript" th:src="@{/inventarioJS/inventario.js}"></script>
-
+	<!-- Script Chart.JS -->
+	<script th:src="@{https://cdn.jsdelivr.net/npm/chart.js}"></script>
+	<script type="text/javascript"
+		th:src="@{/Chart/Inventario/graficos.js}"></script>
 </body>
 </html>
