--- a/src/main/resources/templates/Administration/Ainventario/inventario.html
+++ b/src/main/resources/templates/Administration/Ainventario/inventario.html
@@ -134,7 +134,7 @@
 	<!-- JavaScript -->
 	<script type="text/javascript" th:src="@{/inventarioJS/inventario.js}"></script>
 	<!-- Script Chart.JS -->
-	<script th:src="@{https://cdn.jsdelivr.net/npm/chart.js}"></script>
+	<script th:src="@{/Chart/package/dist/chart.umd.js}"></script>
 	<script type="text/javascript"
 		th:src="@{/Chart/Inventario/graficos.js}"></script>
 </body>
