--- a/src/main/resources/templates/Administration/ACategoria/formulario_cc.html
+++ b/src/main/resources/templates/Administration/ACategoria/formulario_cc.html
@@ -19,7 +19,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 		<div class="container-fluid">
-			<a class="navbar-brand" href="Provvedor.html"> <img
+			<a class="navbar-brand" href="Categoria.html"> <img
 				src="/imgs/LOGO1.png" alt="" width="20" height="24"
 				class="d-inline-block align-text-top" /> Digital Content
 				</a>
