--- a/src/main/resources/templates/Administration/AProveedor/proveedor.html
+++ b/src/main/resources/templates/Administration/AProveedor/proveedor.html
@@ -5,11 +5,11 @@
 <title>Digital Content</title>
 
 <!-- Bootstrap -->
+
 <link th:href="@{/bootstrap/css/bootstrap.min.css}" rel="stylesheet"
 	type="text/css">
-	
 <!-- Logo Pestaña -->
-<link rel="icon" th:href="@{/imgs/LOGO1.png}" />
+<link rel="icon" href="/imgs/LOGO1.png" />
 <!-- Font Awesome -->
 <link th:href="@{/fontawesome/css/fontawesome.min.css}" rel="stylesheet">
 <link th:href="@{/fontawesome/css/brands.min.css}" rel="stylesheet">
@@ -21,47 +21,26 @@
 <body>
 
 <!-- HEADER -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-		<div class="container-fluid">
-			<a class="navbar-brand" href="Proveedor.html"> <img
-				src="/imgs/LOGO1.png" alt="" width="20" height="24"
-				class="d-inline-block align-text-top" /> Digital Content
-			</a>
-			<button class="navbar-toggler" type="button"
-				data-bs-toggle="collapse" data-bs-target="#navbarNav"
-				aria-controls="navbarNav" aria-expanded="false"
-				aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-			<div class="collapse navbar-collapse" id="navbarNav">
-				<ul class="navbar-nav ms-auto">
-					<li class="nav-item mx-2"><a class="nav-link active"
-						aria-current="page" style="padding-top: 0px; padding-bottom: 5px">
-							<i class="fa-solid fa-house"></i>
-					</a></li>
-					<li class="nav-item mx-2"><a class="nav-link"
-						style="padding-top: 0px; padding-bottom: 5px"> <i
-							class="fa-sharp fa-solid fa-cart-shopping"></i>
-					</a></li>
-					<li class="nav-item mx-2"><a class="nav-link"
-						style="padding-top: 0px; padding-bottom: 5px"> Iniciar sesión
-					</a></li>
-				</ul>
-			</div>
-		</div>
-	</nav>
-	
-	<!-- BUTTON -->
-	
-	<a th:href="@{/admin/proveedor/nuevoP}" class="btn btn-outline-success"
-		id="btnC">Crear</a>
-		
+
+	<nav th:replace="~{layouts/header :: header}">Header</nav>
+
+	<!-- SIDEBAR -->
+
+	<div class="container-fluid">
+		<div class="row flex-nowrap">
+			<div th:replace="~{layouts/Adminmenu :: menu}">Menú</div>
+			<div class="col py-3" style="width: 10px">
+				<h3 align="center">Proveedores</h3>
+				<!-- BUTTON -->
+
+				<a th:href="@{/admin/proveedor/nuevoP}" class="btn btn-outline-success"
+					id="btnC">Crear</a>
 		<!-- TABLE -->
 		
-		<div class="container my-4">
+		<div class="container" id="scroll">
 		<div class="row">
 			<table id="example" class="table table-dark table-striped">
-				<thead>
+				<thead class="">
 					<tr>
 						<th>#</th>
 						<th>Nombres</th>
@@ -88,17 +67,25 @@
 							<button th:onclick="@{'confirmar('+ ${proveedor.idProveedor} +')'}"
 								class="btn btn-danger" data-bs-toggle="modal"
 								data-bs-target="#ModalC">Eliminar</button>
-						</td>
-							
-							
-							
+						</td>	
 						</tr>
 				</tbody>
 			</table>
 		</div>
 	</div>
+</div>
+</div>
+</div>
+	
 	
 	<input type="hidden" id="txt_id">
+	
+	<style>
+	#scroll {
+	overflow: auto;
+	width: 80%;
+	}
+	</style>
 	
 	<!-- Modal -->
 	
@@ -107,12 +94,12 @@
 		<div class="modal-dialog">
 			<div class="modal-content">
 				<div class="modal-header" style="background: #A0D8FF">
-				<i class="fa-solid fa-triangle-exclamation"></i>
-					<h5 class="modal-title" id="exampleModalLabel"> ALERTA!!</h5>
+					<i class="fa-solid fa-triangle-exclamation"></i>
+					<h5 class="modal-title" id="exampleModalLabel">ALERTA!!</h5>
 					<button type="button" class="btn-close" data-bs-dismiss="modal"
 						aria-label="Close"></button>
 				</div>
-				<div class="modal-body">¿Esta seguro de eliminar este proveedor?</div>
+				<div class="modal-body">¿Esta seguro de eliminar este Proveedor?</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-secondary"
 						data-bs-dismiss="modal">Cerrar</button>
@@ -121,31 +108,17 @@
 			</div>
 		</div>
 	</div>
+
+	
 	
 	<!-- FOOTER -->
-	
-	<footer class="py-3 my-4" id="footerC">
 
-		<ul class="nav justify-content-center border-bottom pb-3 mb-3">
-			<li class="nav-item"><a href="#"
-				class="nav-link px-2 text-muted">Home</a></li>
-			<li class="nav-item"><a href="#"
-				class="nav-link px-2 text-muted">Features</a></li>
-			<li class="nav-item"><a href="#"
-				class="nav-link px-2 text-muted">Pricing</a></li>
-			<li class="nav-item"><a href="#"
-				class="nav-link px-2 text-muted">FAQs</a></li>
-			<li class="nav-item"><a href="#"
-				class="nav-link px-2 text-muted">About</a></li>
-		</ul>
-		<p class="text-center text-muted">
-			<img src="/imgs/LOGO1.png" alt="alt" width="20" height="24" />
-			&copy; 2022 Digital Content, designed by <span>DonBrayaan</span>
-		</p>
-	</footer>
+	<footer th:replace="~{layouts/footer :: footer}">Footer</footer>
+
 
 	<!-- Script Bootstrap -->
-	<script th:src="@{/bootstrap/js/bootstrap.min.js}" crossorigin="anonymous"></script>
+	<script th:src="@{/bootstrap/js/bootstrap.min.js}"
+		crossorigin="anonymous"></script>
 	<!-- JQuery -->
 	<script type="text/javascript" th:src="@{/JQuery/jquery-3.6.1.min.js}"></script>
 	<!-- DataTables -->
@@ -154,6 +127,6 @@
 	<script type="text/javascript"
 		th:src="@{/datatables/DataTables-1.12.1/js/dataTables.bootstrap5.min.js}"></script>
 	<!-- JavaScript -->
-	<script type="text/javascript" th:src="@{/proveedorJS/proveedor.js}"></script>			
+	<script type="text/javascript" src="/colorJS/color.js"></script>		
 </body>
 </html>
