--- a/src/main/resources/templates/Administration/Abarrio/barrio.html
+++ b/src/main/resources/templates/Administration/Abarrio/barrio.html
@@ -13,7 +13,7 @@
 <link th:href="@{/fontawesome/css/fontawesome.min.css}" rel="stylesheet">
 <link th:href="@{/fontawesome/css/brands.min.css}" rel="stylesheet">
 <link th:href="@{/fontawesome/css/solid.min.css}" rel="stylesheet">
-<!-- DataTables con BootStrap -->
+<!-- DataTables -->
 <link rel="stylesheet" type="text/css"
 	th:href="@{/datatables/DataTables-1.12.1/css/dataTables.bootstrap5.min.css}" />
 </head>
@@ -116,6 +116,16 @@
 		th:src="@{/datatables/DataTables-1.12.1/js/jquery.dataTables.min.js}"></script>
 	<script type="text/javascript"
 		th:src="@{/datatables/DataTables-1.12.1/js/dataTables.bootstrap5.min.js}"></script>
+	<script type="text/javascript"
+		th:src="@{/datatables/Buttons-2.3.4/js/dataTables.buttons.min.js}"></script>
+	<script type="text/javascript"
+		th:src="@{/datatables/JSZip-2.5.0/jszip.min.js}"></script>
+	<script type="text/javascript"
+		th:src="@{/datatables/pdfmake-0.1.36/pdfmake.min.js}"></script>
+	<script type="text/javascript"
+		th:src="@{/datatables/pdfmake-0.1.36/vfs_fonts.js}"></script>
+	<script type="text/javascript"
+		th:src="@{/datatables/Buttons-2.3.4/js/buttons.html5.min.js}"></script>
 	<!-- JavaScript -->
 	<script type="text/javascript" th:src="@{/barrioJS/barrio.js}"></script>
 </body>
