--- a/src/main/resources/templates/Administration/AProveedor/proveedor.html
+++ b/src/main/resources/templates/Administration/AProveedor/proveedor.html
@@ -127,6 +127,6 @@
 	<script type="text/javascript"
 		th:src="@{/datatables/DataTables-1.12.1/js/dataTables.bootstrap5.min.js}"></script>
 	<!-- JavaScript -->
-	<script type="text/javascript" src="/colorJS/color.js"></script>		
+	<script type="text/javascript" src="/proveedorJS/proveedor.js"></script>		
 </body>
 </html>
