--- a/src/main/resources/templates/Administration/Agenero/genero.html
+++ b/src/main/resources/templates/Administration/Agenero/genero.html
@@ -116,7 +116,7 @@
 	<script type="text/javascript"
 		th:src="@{/datatables/DataTables-1.12.1/js/dataTables.bootstrap5.min.js}"></script>
 	<!-- JavaScript -->
-	<script type="text/javascript" th:src="@{/barrioJS/barrio.js}"></script>
+	<script type="text/javascript" th:src="@{/generoJS/genero.js}"></script>
 
 </body>
 </html>
