--- a/src/main/resources/templates/Administration/Atalla/talla.html
+++ b/src/main/resources/templates/Administration/Atalla/talla.html
@@ -119,7 +119,7 @@
 	<script type="text/javascript"
 		th:src="@{/datatables/DataTables-1.12.1/js/dataTables.bootstrap5.min.js}"></script>
 	<!-- JavaScript -->
-	<script type="text/javascript" th:src="@{/categoriaJS/categoria.js}"></script>
+	<script type="text/javascript" th:src="@{/tallaJS/talla.js}"></script>
 				
 
 </body>
