--- a/src/main/resources/templates/layouts/AdminMenu.html
+++ b/src/main/resources/templates/layouts/AdminMenu.html
@@ -40,6 +40,8 @@
 								class="d-none d-sm-inline">-Genero</span></a></li>
 						<li><a href="#" class="nav-link px-0"> <span
 								class="d-none d-sm-inline">-Categoria</span></a></li>
+						<li><a href="#" class="nav-link px-0"> <span
+								class="d-none d-sm-inline">-Proveedor</span></a></li>
 					</ul></li>
 				<li><a href="#" class="nav-link px-0 align-middle"> <i
 						class="fs-4 bi-table"></i> <span
@@ -71,6 +73,9 @@
 						</a></li>
 						<li><a href="#" class="nav-link px-0"> <span
 								class="d-none d-sm-inline">Product</span> 4
+						</a></li>
+						<li><a href="#" class="nav-link px-0"> <span
+								class="d-none d-sm-inline">Product</span> 5
 						</a></li>
 					</ul></li>
 				<li><a href="#" class="nav-link px-0 align-middle"> <i
@@ -112,6 +117,9 @@
           </ul>
           <ul class="btn-toggle-nav  list-unstyled fw-normal pb-1 small">
             <li><a th:href="@{/admin/talla}" class="link-dark text-decoration-none rounded">- Talla</a></li>
+          </ul>
+          <ul class="btn-toggle-nav  list-unstyled fw-normal pb-1 small">
+            <li><a th:href="@{/admin/proveedor}" class="link-dark text-decoration-none rounded">- Proveedor</a></li>
           </ul>
         </div>
       </li>
