--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -38,10 +38,10 @@
 	<!-- CARDS -->
 
 	<div class="container my-4">
-		<div class="row">
-			<div class="card" style="width: 18rem;"
+		<div class="row" style="justify-content: center;">
+			<div class="card my-3 mx-4" style="width: 20rem;"
 				th:each="producto : ${productos}">
-				<img src="imgs/LOGO1.png" class="card-img-top my-3" alt="">
+				<img th:if="${producto.foto}" th:src="@{'/cat/uploads/' + ${producto.foto}}" style="width: 250px; height: 250px; margin: 0 auto;" class="card-img-top my-3" alt="">
 				<hr>
 				<div class="card-body">
 					<h5 class="card-title" th:text="'$'+${producto.precio}"></h5>
