--- a/src/main/resources/templates/Administration/Aproducto/formulario_cp.html
+++ b/src/main/resources/templates/Administration/Aproducto/formulario_cp.html
@@ -49,7 +49,7 @@
 
 	<div class="container my-4">
 		<div class="row justify-content-center">
-			<form class="col-md-6 my-4 bg-light" th:action="@{/admin/producto}" th:object="${productoN}" method="POST">
+			<form class="col-md-6 my-4 bg-light" th:action="@{/admin/save}" th:object="${productoN}" method="POST" enctype="multipart/form-data">
 				<figure class="text-center">
                         <blockquote class="blockquote">
                             <p>Crear Producto</p>
@@ -92,7 +92,7 @@
 				</select>
 				<br>
 				<label>Foto: </label> 
-				<input type="text" name="nombre" th:field="*{foto}" class="form-control" placeholder="Ingrese url foto" required>
+				<input type="file" name="file" th:text="${productoN.foto}" class="form-control" placeholder="Ingrese url foto" required>
 				<br>		
 				<label>Estado:</label>
 				<select class="form-select" th:field="*{estado}" required>
