--- a/src/main/resources/templates/Administration/ACategoria/categoria.html
+++ b/src/main/resources/templates/Administration/ACategoria/categoria.html
@@ -118,6 +118,16 @@
 		th:src="@{/datatables/DataTables-1.12.1/js/jquery.dataTables.min.js}"></script>
 	<script type="text/javascript"
 		th:src="@{/datatables/DataTables-1.12.1/js/dataTables.bootstrap5.min.js}"></script>
+	<script type="text/javascript"
+		th:src="@{/datatables/Buttons-2.3.4/js/dataTables.buttons.min.js}"></script>
+	<script type="text/javascript"
+		th:src="@{/datatables/JSZip-2.5.0/jszip.min.js}"></script>
+	<script type="text/javascript"
+		th:src="@{/datatables/pdfmake-0.1.36/pdfmake.min.js}"></script>
+	<script type="text/javascript"
+		th:src="@{/datatables/pdfmake-0.1.36/vfs_fonts.js}"></script>
+	<script type="text/javascript"
+		th:src="@{/datatables/Buttons-2.3.4/js/buttons.html5.min.js}"></script>
 	<!-- JavaScript -->
 	<script type="text/javascript" th:src="@{/categoriaJS/categoria.js}"></script>
 </body>
