--- a/src/main/resources/templates/Administration/Aproducto/formulario_ep.html
+++ b/src/main/resources/templates/Administration/Aproducto/formulario_ep.html
@@ -15,41 +15,14 @@
 <body>
 
 	<!-- HEADER -->
-	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-		<div class="container-fluid">
-			<a class="navbar-brand" href="Barrio.html"> <img
-				src="/imgs/LOGO1.png" alt="" width="20" height="24"
-				class="d-inline-block align-text-top" /> Digital Content
-			</a>
-			<button class="navbar-toggler" type="button"
-				data-bs-toggle="collapse" data-bs-target="#navbarNav"
-				aria-controls="navbarNav" aria-expanded="false"
-				aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-			<div class="collapse navbar-collapse" id="navbarNav">
-				<ul class="navbar-nav ms-auto">
-					<li class="nav-item mx-2"><a class="nav-link active"
-						aria-current="page" style="padding-top: 0px; padding-bottom: 5px">
-							<i class="fa-solid fa-house"></i>
-					</a></li>
-					<li class="nav-item mx-2"><a class="nav-link"
-						style="padding-top: 0px; padding-bottom: 5px"> <i
-							class="fa-sharp fa-solid fa-cart-shopping"></i>
-					</a></li>
-					<li class="nav-item mx-2"><a class="nav-link"
-						style="padding-top: 0px; padding-bottom: 5px"> Iniciar sesión
-					</a></li>
-				</ul>
-			</div>
-		</div>
-	</nav>
+
+	<nav th:replace="~{layouts/header :: header}">Header</nav>
 
 	<!-- FORM -->
 
 	<div class="container my-4">
 		<div class="row justify-content-center">
-			<form class="col-md-6 my-4 bg-light" th:action="@{/admin/producto}" th:object="${producto}" method="POST">
+			<form class="col-md-6 my-4 bg-light" th:action="@{/admin/producto}" th:object="${producto}" method="POST" enctype="multipart/form-data">
 				<figure class="text-center">
                         <blockquote class="blockquote">
                             <p>Actualizar</p>
@@ -93,8 +66,13 @@
 				</select>
 				<br>
 				<label>Foto: </label> 
-				<input type="text" name="nombre" th:field="*{foto}" class="form-control" placeholder="Ingrese url foto" required>
-				<br>	
+				<input type="text" readonly="readonly" name="file" th:field="*{foto}" th:value="${producto.foto}" class="form-control" placeholder="Ingrese url foto" required>
+				<hr>
+				<div style="text-align: center;">
+				<img th:if="${producto.foto}" th:src="@{'/cat/uploads/' + ${producto.foto}}" style="width: 250px; height: 250px; margin: 0 auto;" class="card-img-top my-3" alt="">
+				</div>
+					<a class="btn btn-outline-success" th:href="@{'/admin/editfoto/'+ ${producto.idProducto}}">¿Deseas editar la imagen?</a>
+				<hr><br><br>
 				<label>Estado:</label>
 				<select class="form-select" th:field="*{estado}" required>
 				 	<option value="Activo">Activo</option>
@@ -111,25 +89,7 @@
 
 	<!-- FOOTER -->
 
-	<footer class="py-3 my-4" id="footerC">
-
-		<ul class="nav justify-content-center border-bottom pb-3 mb-3">
-			<li class="nav-item"><a href="#"
-				class="nav-link px-2 text-muted">Home</a></li>
-			<li class="nav-item"><a href="#"
-				class="nav-link px-2 text-muted">Features</a></li>
-			<li class="nav-item"><a href="#"
-				class="nav-link px-2 text-muted">Pricing</a></li>
-			<li class="nav-item"><a href="#"
-				class="nav-link px-2 text-muted">FAQs</a></li>
-			<li class="nav-item"><a href="#"
-				class="nav-link px-2 text-muted">About</a></li>
-		</ul>
-		<p class="text-center text-muted">
-			<img src="/imgs/LOGO1.png" alt="alt" width="20" height="24" />
-			&copy; 2022 Digital Content, designed by <span>DonBrayaan</span>
-		</p>
-	</footer>
+	<nav th:replace="~{layouts/footer :: footer}">Header</nav>
 
 	<!-- Script Bootstrap -->
 	<script
