--- a/src/main/resources/templates/Administration/Aproducto/ef.html
+++ b/src/main/resources/templates/Administration/Aproducto/ef.html
@@ -25,7 +25,7 @@
 
 	<div class="container my-4">
 		<div class="row justify-content-center">
-			<form class="col-md-6 my-4 bg-light" th:action="@{/admin/producto}"
+			<form class="col-md-6 my-4 bg-light" th:action="@{/admin/save}"
 				th:object="${producto}" method="POST" enctype="multipart/form-data">
 				<figure class="text-center">
 					<blockquote class="blockquote">
