--- a/src/main/resources/templates/Administration/AColor/color.html
+++ b/src/main/resources/templates/Administration/AColor/color.html
@@ -62,20 +62,36 @@
 								</tr>
 							</tbody>
 						</table>
+						<form th:action="@{/admin/upload}" method="POST" enctype="multipart/form-data">
+							<div class="row my-4">
+								<div th:if=${param.exito}>
+									<div class="alert alert-success">Carga Realizada Correctamente</div>
+								</div>
+								<div th:if=${param.fallo}>
+									<div class="alert alert-danger">El archivo ya existe</div>
+								</div>
+								<div class="col-md-4">
+									<span>¿Deseas hacer una carga masiva?</span> <input type="file"
+										name="files" onchange="" id="file" class="file form-control" required="required">
+								</div>
+								<div class="col-md-4">
+									<button class="btn btn-success my-4">Subir</button>
+								</div>
+							</div>
+						</form>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-
 	<input type="hidden" id="txt_id">
-	
+
 	<style>
-	#scroll {
+#scroll {
 	overflow: auto;
 	width: 80%;
-	}
-	</style>
+}
+</style>
 
 	<!-- Modal -->
 
