--- a/src/main/resources/templates/Ausuario/usuario.html
+++ b/src/main/resources/templates/Ausuario/usuario.html
@@ -22,57 +22,66 @@
 	<!-- HEADER -->
 
 	<nav th:replace="~{layouts/header :: header}">Header</nav>
-	
-	<!-- BUTTON -->
 
-	<a th:href="@{/usuario/nuevoU}" class="btn btn-outline-success"
-		id="btnC">Crear</a>
 
-	<!-- TABLE -->
+	<div class="container-fluid">
+		<div class="row flex-nowrap">
 
-	<div class="container my-4">
-		<div class="row">
-			<table id="example" class="table table-dark table-striped">
-				<thead>
-					<tr>
-						<th>#</th>
-						<th>Nombres</th>
-						<th>Apellidos</th>
-						<th>Tipo Documento</th>
-						<th>Num Documento</th>
-						<th>Direccion</th>
-						<th>Barrio</th>
-						<th>Telefono</th>
-						<th>Rol</th>
-						<th>Options</th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr th:each="persona : ${listaU}">
-						<td th:text="${persona.idUsuario}"></td>
-						<td th:text="${persona.nombres}"></td>
-						<td th:text="${persona.apellidos}"></td>
-						<td th:text="${persona.tipoDocumento}"></td>
-						<td th:text="${persona.numDocumento}"></td>
-						<td th:text="${persona.direccion}"></td>
-						<td th:text="${persona.id_Barrio_fk}"></td>
-						<td th:text="${persona.telefono}"></td>
-						<td th:text="${persona.roles}"></td>
-						<td>
-						
-							<a th:href="@{'/admin/usuario/asgrol'+'/'+ ${persona.idUsuario}}"
-							class="btn btn-success">Editar</a>
+			<div th:replace="~{layouts/Adminmenu :: menu}">Menú</div>
+			<div class="col py-3" style="width: 10px">
+				<h3 align="center">Usuarios</h3>
+				<!-- TABLE -->
 
-							<button th:onclick="@{'confirmar('+ ${persona.idUsuario} +')'}"
-								class="btn btn-danger" data-bs-toggle="modal"
-								data-bs-target="#ModalC">Eliminar</button></td>
-					</tr>
-				</tbody>
-			</table>
+				<div class="container my-4" id="scroll">
+					<div class="row">
+						<table id="example" class="table table-dark table-striped">
+							<thead>
+								<tr>
+									<th>#</th>
+									<th>Nombres</th>
+									<th>Apellidos</th>
+									<th>Tipo Documento</th>
+									<th>Num Documento</th>
+									<th>Direccion</th>
+									<th>Barrio</th>
+									<th>Telefono</th>
+									<th>Rol</th>
+									<th>Options</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr th:each="persona : ${listaU}">
+									<td th:text="${persona.idUsuario}"></td>
+									<td th:text="${persona.nombres}"></td>
+									<td th:text="${persona.apellidos}"></td>
+									<td th:text="${persona.tipoDocumento}"></td>
+									<td th:text="${persona.numDocumento}"></td>
+									<td th:text="${persona.direccion}"></td>
+									<td th:text="${persona.id_Barrio_fk}"></td>
+									<td th:text="${persona.telefono}"></td>
+									<td th:text="${persona.roles}"></td>
+									<td><a
+										th:href="@{'/admin/usuario/asgrol'+'/'+ ${persona.idUsuario}}"
+										class="btn btn-success">Editar</a></td>
+								</tr>
+							</tbody>
+						</table>
+					</div>
+				</div>
+
+			</div>
 		</div>
 	</div>
 
 	<input type="hidden" id="txt_id">
+
+	<style>
+#scroll {
+	overflow: auto;
+	width: 80%;
+}
+</style>
+
 
 	<!-- Modal -->
 
@@ -98,28 +107,11 @@
 
 	<!-- FOOTER -->
 
-	<footer class="py-3 my-4" id="footerC">
-
-		<ul class="nav justify-content-center border-bottom pb-3 mb-3">
-			<li class="nav-item"><a href="#"
-				class="nav-link px-2 text-muted">Home</a></li>
-			<li class="nav-item"><a href="#"
-				class="nav-link px-2 text-muted">Features</a></li>
-			<li class="nav-item"><a href="#"
-				class="nav-link px-2 text-muted">Pricing</a></li>
-			<li class="nav-item"><a href="#"
-				class="nav-link px-2 text-muted">FAQs</a></li>
-			<li class="nav-item"><a href="#"
-				class="nav-link px-2 text-muted">About</a></li>
-		</ul>
-		<p class="text-center text-muted">
-			<img src="/imgs/LOGO1.png" alt="alt" width="20" height="24" />
-			&copy; 2022 Digital Content, designed by <span>DonBrayaan</span>
-		</p>
-	</footer>
+	<footer th:replace="~{layouts/footer :: footer}">Footer</footer>
 
 	<!-- Script Bootstrap -->
-	<script th:src="@{/bootstrap/js/bootstrap.min.js}" crossorigin="anonymous"></script>
+	<script th:src="@{/bootstrap/js/bootstrap.min.js}"
+		crossorigin="anonymous"></script>
 	<!-- JQuery -->
 	<script type="text/javascript" th:src="@{/JQuery/jquery-3.6.1.min.js}"></script>
 	<!-- DataTables -->
