--- a/src/main/resources/templates/layouts/AdminMenu.html
+++ b/src/main/resources/templates/layouts/AdminMenu.html
@@ -129,39 +129,37 @@
         </a>
         <div class="collapse" id="dashboard-collapse">
           <ul class="btn-toggle-nav  list-unstyled fw-normal pb-1 small">
-            <li><a th:href="@{/admin/barrio}" class="link-primary text-decoration-none rounded">- Barrios</a></li>
+            <li><a th:href="@{/admin/barrio}" class="link-dark text-decoration-none rounded">- Barrios</a></li>
           </ul>
         </div>
       </li>
       <li>
-        <a href="#" class="nav-link text-white">
-          Orders
+        <a class="align-items-center nav-link text-white" role="button" data-bs-toggle="collapse" data-bs-target="#dashboard-collapse2">
+          Asignar Roles
+        </a>
+        <div class="collapse" id="dashboard-collapse2">
+          <ul class="btn-toggle-nav  list-unstyled fw-normal pb-1 small">
+            <li><a th:href="@{/admin/usuario}" class="link-dark text-decoration-none rounded">- Usuarios</a></li>
+          </ul>
+        </div>
+      </li>
+      <li class="nav-item">
+        <a th:href="@{/admin/inventario}" class="align-items-center nav-link text-white" aria-current="page">
+         	Inventario
         </a>
       </li>
-      <li>
-        <a href="#" class="nav-link text-white">
-          Products
-        </a>
-      </li>
-      <li>
-        <a href="#" class="nav-link text-white">
-          Customers
+      <li class="nav-item">
+        <a th:href="@{/admin/compra}" class="align-items-center nav-link text-white" aria-current="page">
+         	Compras
         </a>
       </li>
     </ul>
     <hr>
     <div class="dropdown">
       <a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
-        <img src="https://github.com/mdo.png" alt="" width="32" height="32" class="rounded-circle me-2">
-        <strong>mdo</strong>
+        <img th:src="@{/imgs/LOGO1.png}" alt="" width="32" height="32" class="me-2">
+        <strong>DC</strong>
       </a>
-      <ul class="dropdown-menu dropdown-menu-dark text-small shadow" aria-labelledby="dropdownUser1">
-        <li><a class="dropdown-item" href="#">New project...</a></li>
-        <li><a class="dropdown-item" href="#">Settings</a></li>
-        <li><a class="dropdown-item" href="#">Profile</a></li>
-        <li><hr class="dropdown-divider"></li>
-        <li><a class="dropdown-item" href="#">Sign out</a></li>
-      </ul>
     </div>
   </div>
 </body>
