--- a/src/main/resources/templates/Administration/admin.html
+++ b/src/main/resources/templates/Administration/admin.html
@@ -29,22 +29,23 @@
 	<div class="container-fluid">
 		<div class="row flex-nowrap">
 			<div th:replace="~{layouts/Adminmenu :: menu}">Menú</div>
-			<div class="col py-3">
-				<table class="table table-dark">
-					<thead>
-						<tr>
-							<th>HOLA</th>
-						</tr>
-					</thead>
-					<tbody>
-						<tr>
-							<td>hfjksjdhnm</td>
-						</tr>
-					</tbody>
-				</table>
+			<div class="col py-3" style="text-align: center;">
+				<figure class="text-center">
+								<blockquote class="blockquote">
+									<p style="font-size: 30px">Bienvenido</p>
+								</blockquote>
+								<figcaption class="blockquote-footer" style="font-size: 20px">
+									explora las opciones <cite title="Source Title">
+										en el menú</cite>
+								</figcaption>
+							</figure>
+				<div style="margin: 0 auto; text-align: center;">
+				<img alt="hola" th:src="@{/imgs/LOGITO.png}" width="50%">
+				</div>
 			</div>
 		</div>
 	</div>
+	
 
 	<!-- FOOTER -->
 
