--- a/src/main/resources/templates/layouts/AdminMenu.html
+++ b/src/main/resources/templates/layouts/AdminMenu.html
@@ -131,6 +131,9 @@
           <ul class="btn-toggle-nav  list-unstyled fw-normal pb-1 small">
             <li><a th:href="@{/admin/barrio}" class="link-dark text-decoration-none rounded">- Barrios</a></li>
           </ul>
+	<ul class="btn-toggle-nav  list-unstyled fw-normal pb-1 small">
+            <li><a th:href="@{/admin/devolucion}" class="link-primary text-decoration-none rounded">- Devolucion</a></li>
+          </ul>
         </div>
       </li>
       <li>
