--- a/src/main/resources/templates/Ausuario/formulario_cu.html
+++ b/src/main/resources/templates/Ausuario/formulario_cu.html
@@ -11,6 +11,8 @@
 	crossorigin="anonymous" />
 <!-- Logo Pestaña -->
 <link rel="icon" href="/imgs/LOGO1.png" />
+<!-- SweetAlert2 -->
+<link rel="stylesheet" th:href="@{/SweetAlert2/package/dist/sweetalert2.min.css}">
 </head>
 <body>
 
@@ -38,9 +40,9 @@
 					</figcaption>
 				</figure>
 				<label>*Nombres: </label> <input type="text" name="nombre"
-					th:field="*{nombres}" class="form-control"
+					th:field="*{nombres}" id="txtnombre" class="form-control"
 					placeholder="Ingrese Nombres" autofocus="autofocus" required>
-				<br> <label>*Apellidos: </label> <input type="text"
+				<br> <label>*Apellidos: </label> <input type="text" id="txtapellido"
 					name="apellido" th:field="*{apellidos}" class="form-control"
 					placeholder="Ingrese Apellido" required> <br> <label>*Tipo
 					Documento:</label> <select class="form-select" th:field="*{tipoDocumento}"
@@ -70,25 +72,27 @@
 				<div class="box-footer text-center">
 					<span>¿Ya tienes una cuenta? click </span><a th:href="@{/login}">aquí</a>
 					<br> <br>
-					<button type="submit" class="btn btn-danger">Registrar</button>
+					<button onclick="return si()" class="btn btn-danger">Registrar</button>
 					<br> <br>
 				</div>
 			</form>
 		</div>
 	</div>
-
 	<!-- FOOTER -->
 
 	<footer th:replace="~{layouts/footer :: footer}">Footer</footer>
-	
+
 	<!-- Script Bootstrap -->
-	<script
-		src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-		integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+	<script th:src="@{/bootstrap/js/bootstrap.min.js}"
 		crossorigin="anonymous"></script>
-	<!-- Font Awesome -->
-	<script src="https://kit.fontawesome.com/e4804d9539.js"
-		crossorigin="anonymous"></script>
+	<!-- JQuery -->
+	<script type="text/javascript" th:src="@{/JQuery/jquery-3.6.1.min.js}"></script>
+	<!-- JavaScript -->
+	<script type="text/javascript"
+		th:src="@{/Validaciones/RegistroValidacion.js}"></script>
+	<!-- SweetAlert2 -->
+	<script type="text/javascript" th:src="@{/SweetAlert2/package/dist/sweetalert2.all.min.js}"></script>
+	
 </body>
 </html>
 </body>
