--- a/src/main/resources/templates/Administration/ACategoria/formulario_cc.html
+++ b/src/main/resources/templates/Administration/ACategoria/formulario_cc.html
@@ -61,7 +61,7 @@
                         </figcaption>
                         </figure>
                    <label>Nombre: </label> 
-					<input type="text" name="nombre" th:field="*{nombreCategoria}" class="form-control" placeholder="Ingrese Nombre" required>
+					<input type="text" name="nombre" th:field="*{nombreCategoria}" class="form-control" id="txtnombre" placeholder="Ingrese Nombre" required>
 					<br>
 					<label>Estado:</label>
 				<select class="form-select" th:field="*{estado}" required>
@@ -70,7 +70,7 @@
 				</select>
 				<br>
 				<div class="box-footer">
-					<button class="btn btn-danger">Registrar</button>
+					<button class="btn btn-danger" onclick="return si()">Registrar</button>
 				</div>
 				<br>
 			</form>
@@ -107,6 +107,13 @@
 	<!-- Font Awesome -->
 	<script src="https://kit.fontawesome.com/e4804d9539.js"
 		crossorigin="anonymous"></script>
+		<!-- JQuery -->
+	<script type="text/javascript" th:src="@{/JQuery/jquery-3.6.1.min.js}"></script>
+	<!-- JavaScript -->
+	<script type="text/javascript"
+		th:src="@{/Validaciones/CrearCategoriaValidacion.js}"></script>
+	<!-- SweetAlert2 -->
+	<script type="text/javascript" th:src="@{/SweetAlert2/package/dist/sweetalert2.all.min.js}"></script>
 
 </body>
 </html>
