--- a/src/main/resources/templates/Administration/Aproducto/formulario_cp.html
+++ b/src/main/resources/templates/Administration/Aproducto/formulario_cp.html
@@ -33,7 +33,7 @@
                         </figcaption>
                     </figure>
 				<label>Nombre: </label> 
-				<input type="text" name="nombre" th:field="*{nombre}" class="form-control" placeholder="Ingrese Nombre" required>
+				<input type="text" name="nombre" th:field="*{nombre}" class="form-control" id=txtnombre placeholder="Ingrese Nombre" required>
 				<br>
 				<label>Talla: </label>
 				<select class="form-select" th:field="*{id_Talla_fk}" required>
@@ -75,7 +75,7 @@
 				</select>
 				<br>
 				<div class="box-footer">
-					<button class="btn btn-danger">Crear</button>
+					<button onclick="return si()" class="btn btn-danger">Crear</button>
 				</div>
 				<br>
 			</form>
@@ -94,6 +94,13 @@
 	<!-- Font Awesome -->
 	<script src="https://kit.fontawesome.com/e4804d9539.js"
 		crossorigin="anonymous"></script>
+	<!-- JQuery -->
+	<script type="text/javascript" th:src="@{/JQuery/jquery-3.6.1.min.js}"></script>
+	<!-- JavaScript -->
+	<script type="text/javascript"
+		th:src="@{/Validaciones/CrearProductoValidacion.js}"></script>
+	<!-- SweetAlert2 -->
+	<script type="text/javascript" th:src="@{/SweetAlert2/package/dist/sweetalert2.all.min.js}"></script>
 </body>
 </html>
 </body>
