--- a/src/main/resources/templates/Administration/Aproducto/formulario_ep.html
+++ b/src/main/resources/templates/Administration/Aproducto/formulario_ep.html
@@ -33,7 +33,7 @@
                 </figure>
 				<input type="hidden" th:field="*{idProducto}" th:value="${producto.idProducto}">
 				<label>Nombre: </label> 
-				<input type="text" name="nombre" th:field="*{nombre}" class="form-control" placeholder="Ingrese Nombre" required>
+				<input type="text" name="nombre" th:field="*{nombre}" class="form-control" id="txtnombre" placeholder="Ingrese Nombre" required>
 				<br>
 				<label>Talla: </label>
 				<select class="form-select" th:field="*{id_Talla_fk}" required>
@@ -80,7 +80,7 @@
 				</select>
 				<br>
 				<div class="box-footer">
-					<button class="btn btn-danger">Registrar</button>
+					<button class="btn btn-danger" onclick="return si()">Registrar</button>
 				</div>
 				<br>
 			</form>
@@ -99,6 +99,13 @@
 	<!-- Font Awesome -->
 	<script src="https://kit.fontawesome.com/e4804d9539.js"
 		crossorigin="anonymous"></script>
+		<!-- JQuery -->
+	<script type="text/javascript" th:src="@{/JQuery/jquery-3.6.1.min.js}"></script>
+	<!-- JavaScript -->
+	<script type="text/javascript"
+		th:src="@{/Validaciones/EditarProductoValidacion.js}"></script>
+	<!-- SweetAlert2 -->
+	<script type="text/javascript" th:src="@{/SweetAlert2/package/dist/sweetalert2.all.min.js}"></script>
 </body>
 </html>
 </body>
