--- a/src/main/resources/templates/Administration/ACategoria/formulario_ec.html
+++ b/src/main/resources/templates/Administration/ACategoria/formulario_ec.html
@@ -66,7 +66,7 @@
                 </figure>
                 <input type="hidden" th:field="*{idCategoria}" th:value="${categoria.idCategoria}">
 				<label>Nombre: </label>
-				<input type="text" th:field="*{nombreCategoria}" name="nombre" class="form-control" placeholder="Ingrese nuevo nombre" required>
+				<input type="text" th:field="*{nombreCategoria}" name="nombre" class="form-control" id="txtnombre" placeholder="Ingrese nuevo nombre" required>
 				<br>
 				<label>Estado:</label>
 				<select class="form-select" th:field="*{estado}" required>
@@ -75,7 +75,7 @@
 				</select>
 				<br>
 				<div class="box-footer">
-					<button class="btn btn-danger">Actualizar</button>	
+					<button class="btn btn-danger" onclick="return si()">Actualizar</button>	
 				</div>
 				<br>
 			</form>
@@ -112,6 +112,13 @@
 	<!-- Font Awesome -->
 	<script src="https://kit.fontawesome.com/e4804d9539.js"
 		crossorigin="anonymous"></script>
+	<!-- JQuery -->
+	<script type="text/javascript" th:src="@{/JQuery/jquery-3.6.1.min.js}"></script>
+	<!-- JavaScript -->
+	<script type="text/javascript"
+		th:src="@{/Validaciones/EditarCategoriaValidacion.js}"></script>
+	<!-- SweetAlert2 -->
+	<script type="text/javascript" th:src="@{/SweetAlert2/package/dist/sweetalert2.all.min.js}"></script>
 				
 
 
