--- a/src/main/resources/templates/Administration/Agenero/formulario_cg.html
+++ b/src/main/resources/templates/Administration/Agenero/formulario_cg.html
@@ -59,7 +59,7 @@
                         </figcaption>
                     </figure>
 				<label>Nombre: </label> 
-				<input type="text" name="nombre" th:field="*{nombre}" class="form-control" placeholder="Ingrese Nombre" required>
+				<input type="text" name="nombre" th:field="*{nombre}" class="form-control" id="txtnombre" placeholder="Ingrese Nombre" required>
 				<br>
 				<label>Estado:</label>
 				<select class="form-select" th:field="*{estado}" required>
@@ -68,7 +68,7 @@
 				</select>
 				<br>
 				<div class="box-footer">
-					<button class="btn btn-danger">Crear</button>
+					<button class="btn btn-danger" onclick="return si()">Crear</button>
 				</div>
 				<br>
 			</form>
@@ -105,6 +105,13 @@
 	<!-- Font Awesome -->
 	<script src="https://kit.fontawesome.com/e4804d9539.js"
 		crossorigin="anonymous"></script>
+	<!-- JQuery -->
+	<script type="text/javascript" th:src="@{/JQuery/jquery-3.6.1.min.js}"></script>
+	<!-- JavaScript -->
+	<script type="text/javascript"
+		th:src="@{/Validaciones/CrearGeneroValidacion.js}"></script>
+	<!-- SweetAlert2 -->
+	<script type="text/javascript" th:src="@{/SweetAlert2/package/dist/sweetalert2.all.min.js}"></script>
 
 </body>
 </html>
