--- a/src/main/resources/templates/Administration/Adevolucion/formulario_ed.html
+++ b/src/main/resources/templates/Administration/Adevolucion/formulario_ed.html
@@ -65,19 +65,39 @@
                 </figure>
                 <input type="hidden" th:field="*{idDevolucion}" th:value="${devolucion.idDevolucion}">
 				<label>Descripcion: </label>
-				<input type="text" th:field="*{descripcion}" name="descripcion" class="form-control" placeholder="Ingrese la dewscripcion de la devolcion" required>
+				<input type="text" th:field="*{descripcion}" name="descripcion" class="form-control" id="txtdescripcion" placeholder="Ingrese la dewscripcion de la devolcion" required>
 				<br>
 				<label>Fecha: </label>
-				<input type="text" th:field="*{fecha}" name="descripcion" class="form-control" placeholder="Ingrese Fecha" required>
+				<input type="date" th:field="*{fecha}" name="fecha" class="form-control" placeholder="Ingrese Fecha" required>
 				<br>
 				<br>
 				<div class="box-footer">
-					<button class="btn btn-danger">Actualizar</button>	
+					<button class="btn btn-danger" onclick="return si()">Actualizar</button>	
 				</div>
 				<br>
 			</form>
 		</div>
 	</div>
+	
+	<!-- FOOTER -->
+
+	<nav th:replace="~{layouts/footer :: footer}">Header</nav>
+
+	<!-- Script Bootstrap -->
+	<script
+		src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+		crossorigin="anonymous"></script>
+	<!-- Font Awesome -->
+	<script src="https://kit.fontawesome.com/e4804d9539.js"
+		crossorigin="anonymous"></script>
+	<!-- JQuery -->
+	<script type="text/javascript" th:src="@{/JQuery/jquery-3.6.1.min.js}"></script>
+	<!-- JavaScript -->
+	<script type="text/javascript"
+		th:src="@{/Validaciones/EditarDevolucionValidacion.js}"></script>
+	<!-- SweetAlert2 -->
+	<script type="text/javascript" th:src="@{/SweetAlert2/package/dist/sweetalert2.all.min.js}"></script>
 
 </body>
 </html>
